--- a/.gitignore
+++ b/.gitignore
@@ -28,7 +28,7 @@ share/python-wheels/
 MANIFEST
 # Module 17 Practice Folder
 Module_Practice/
-
+/Module-17-Challenge-Resources/LoanStats_2019Q1.csv
 # PyInstaller
 #  Usually these files are written by a python script from a template
 #  before PyInstaller builds the exe, so as to inject date/other infos into it.
